--- a/components/view/index.css
+++ b/components/view/index.css
@@ -15,7 +15,7 @@
 
 @media (min-width: 1000px) {
   .View-main {
-    padding-top: 14rem;
+    padding-top: 12rem;
   }
 }
 
